# goit-ds-hw-02

./: create_tables.py  create_tables.sql  main.py  pyproject.toml  seed.py  tasks-management.sqlite
queries/: eighth_query.py  eleventh_query.py  fifth_query.py  first_query.py  fourteenth_query.py  fourth_query.py  ninth_query.py  query_1.py  query_10.py  query_11.py  query_12.py  query_13.py  query_14.py  query_2.py  query_3.py  query_4.py  query_5.py  query_6.py  query_7.py  query_8.py  query_9.py  second_query.py  seventh_query.py  sixth_query.py  tenth_query.py  third_query.py  thirteenth_query.py  twelfth_query.py
