[project]
name = "goit-ds-hw-02"
version = "0.1.0"
description = "Introduction to SQL databases."
authors = [
    {name = "Sviatozar Matiash",email = "sviatozar123@gmail.com"}
]
readme = "README.md"
requires-python = "3.10.11"
dependencies = [
    "faker (==37.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
